# SocialHealth

./: .env.example  .gitignore  I18N.md  Procfile  RAILWAY.md  README.md  VERCEL.md  babel.cfg  config.py  pyproject.toml  railway.json  requirements.txt  run.py  seed_achievements.py  seed_tasks.py  test_module1.py  test_module10.py  test_module2.py  test_module3.py  test_module4.py  test_module5.py  test_module6.py  test_module7.py  test_module8.py  test_module9.py  vercel.json
.github/workflows/: ci.yml
api/: index.py
app/: __init__.py  database.py  emotions.py  extensions.py  task_i18n.py
app/api/achievements/: __init__.py
app/api/entries/: __init__.py
app/api/settings/: __init__.py
app/api/tasks/: __init__.py
app/data/: tips_data.py
app/models/: __init__.py  achievement.py  daily_entry.py  task.py  user.py  user_achievement.py  user_settings.py  user_task.py
app/routes/: api.py  auth.py  dashboard.py  diary.py  main.py  profile.py  progress.py  sos.py  tasks.py  tips.py
app/services/: achievement_service.py  ai_service.py  stats_service.py  task_service.py
app/static/css/: lunar.css  mobile.css  profile.css  sos.css  tips.css
app/static/js/: sos.js  tips.js
app/templates/: base.html
app/templates/auth/: login.html  register.html
migrations/versions/: 20260520_0001_initial_schema.py
scripts/: i18n.py
tests/: conftest.py  test_ai_service.py  test_auth.py  test_dashboard.py  test_diary.py  test_health.py  test_i18n.py  test_models.py  test_profile.py  test_sos.py  test_tasks.py  test_tips.py  test_vercel_config.py
(+31 files in other folders)
