[project]
name = "socialhealth"
version = "0.1.0"
description = "Flask app for social anxiety CBT tracking"
requires-python = ">=3.11,<3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-jwt-extended>=4.6.0",
    "flask-migrate>=4.0.0",
    "flask-limiter>=3.5.0",
    "flask-wtf>=1.2.0",
    "flask-babel>=4.0.0",
    "email-validator>=2.0.0",
    "anthropic>=0.21.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.0",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.0",
]

[tool.vercel]
entrypoint = "api/index.py"
